feat: auto-create AGENTS.md from template on startup
- Add AGENTS.tmpl.md template file for Home Assistant config context
- Copy template to AGENTS.md in working directory if not present
- Include template in Docker image

--- a/codex/Dockerfile
+++ b/codex/Dockerfile
@@ -1,4 +1,5 @@
 ARG BUILD_FROM=ghcr.io/home-assistant/aarch64-base:latest
+ARG BUILD_ARCH
 
 FROM ${BUILD_FROM}
 
@@ -17,12 +18,18 @@ RUN apk add --no-cache \
     ttyd \
     vim
 
-# Install Codex CLI
-RUN npm install -g @openai/codex
+# Install Home Assistant CLI
+ARG BUILD_ARCH
+ADD https://github.com/home-assistant/cli/releases/latest/download/ha_${BUILD_ARCH} /usr/local/bin/ha
+RUN chmod +x /usr/local/bin/ha && ha --help
 
-WORKDIR /workspace
+# Install Codex CLI
+RUN npm install -g @openai/codex@^0.77.0
+
+WORKDIR /config
 
 COPY run.sh /run.sh
 COPY codex.sh /codex.sh
+COPY AGENTS.tmpl.md /AGENTS.tmpl.md
 
 CMD ["/run.sh"]
