feat: add resume last session option and persist codex sessions
- Add `resume_last_session` boolean option to config.yaml
- Symlink ~/.codex/sessions to /data/.codex-sessions for persistence across restarts
- Pass `resume --last` to codex CLI when the option is enabled

--- a/codex/config.yaml
+++ b/codex/config.yaml
@@ -37,10 +37,12 @@ map:
 options:
   openai_api_key: ""
   model: ""
+  resume_last_session: false
 
 schema:
   openai_api_key: password
   model: str?
+  resume_last_session: bool?
 
 # Allow the add-on to access the Home Assistant API
 hassio_api: true
